Fix collapsed version of navbar

--- a/web/skins/classic/css/base/skin.css
+++ b/web/skins/classic/css/base/skin.css
@@ -650,6 +650,10 @@ input[type=submit]:disabled,
 	background-color:#485460 !important;
 }
 
+#navbar-container > nav {
+  width: 100%;
+}
+
 #reload, #panel {
   padding: 0;
 }
